--- a/Motocycles/Views/Base.lproj/Main.storyboard
+++ b/Motocycles/Views/Base.lproj/Main.storyboard
@@ -189,11 +189,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2s3-cN-7Mi">
-                                <rect key="frame" x="157" y="732" width="100" height="100"/>
+                                <rect key="frame" x="157" y="712" width="100" height="100"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="2RS-ed-6Zk"/>
-                                    <constraint firstAttribute="height" constant="100" id="nA9-de-d1Z"/>
+                                    <constraint firstAttribute="height" constant="100" id="DNE-Sr-DRI"/>
+                                    <constraint firstAttribute="width" constant="100" id="Eke-uI-Qd4"/>
                                 </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
@@ -204,9 +204,39 @@
                                     <action selector="btnOk:" destination="esr-iw-TJq" eventType="touchUpInside" id="2fK-WQ-LTk"/>
                                 </connections>
                             </button>
+                            <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="2rh-Qc-zP9">
+                                <rect key="frame" x="149.5" y="666" width="115.5" height="26"/>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="currentPageIndicatorTintColor" systemColor="systemRedColor"/>
+                            </pageControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z1p-eU-7DK">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="646"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="bdF-po-vaF">
+                                    <size key="itemSize" width="413" height="635"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="idItemOnb" id="idC-kX-YqX">
+                                        <rect key="frame" x="0.0" y="5.5" width="413" height="635"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" id="9Ni-4g-4BF">
+                                            <rect key="frame" x="0.0" y="0.0" width="413" height="635"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="413" height="635"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rE8-iR-9Xb">
-                                <rect key="frame" x="20" y="770.5" width="117" height="35.5"/>
+                                <rect key="frame" x="20" y="822" width="115" height="40"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="7Uv-Vz-jnW"/>
+                                    <constraint firstAttribute="width" constant="115" id="AER-rr-ap8"/>
+                                </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Saltar">
@@ -216,47 +246,20 @@
                                     <action selector="btnSkipt:" destination="esr-iw-TJq" eventType="touchUpInside" id="UfX-A0-PbE"/>
                                 </connections>
                             </button>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="2rh-Qc-zP9">
-                                <rect key="frame" x="149.5" y="646" width="115.5" height="26"/>
-                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="currentPageIndicatorTintColor" systemColor="systemRedColor"/>
-                            </pageControl>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z1p-eU-7DK">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="646"/>
-                                <color key="backgroundColor" systemColor="systemTealColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bdF-po-vaF">
-                                    <size key="itemSize" width="412" height="591"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="idItemOnb" id="idC-kX-YqX">
-                                        <rect key="frame" x="0.0" y="29.5" width="411" height="587"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9Ni-4g-4BF">
-                                            <rect key="frame" x="0.0" y="0.0" width="411" height="587"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                        <size key="customSize" width="411" height="587"/>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Wnq-M8-efE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="2s3-cN-7Mi" firstAttribute="top" secondItem="2rh-Qc-zP9" secondAttribute="bottom" constant="60" id="2Is-Fy-uD1"/>
-                            <constraint firstItem="2s3-cN-7Mi" firstAttribute="leading" secondItem="rE8-iR-9Xb" secondAttribute="trailing" constant="20" id="FAJ-w0-ChG"/>
-                            <constraint firstItem="rE8-iR-9Xb" firstAttribute="leading" secondItem="Wnq-M8-efE" secondAttribute="leading" constant="20" id="Qd0-Wr-ACs"/>
-                            <constraint firstItem="Wnq-M8-efE" firstAttribute="trailing" secondItem="z1p-eU-7DK" secondAttribute="trailing" id="U4x-u7-Xg4"/>
-                            <constraint firstItem="2rh-Qc-zP9" firstAttribute="top" secondItem="z1p-eU-7DK" secondAttribute="bottom" id="X2B-58-m3X"/>
-                            <constraint firstItem="Wnq-M8-efE" firstAttribute="bottom" secondItem="rE8-iR-9Xb" secondAttribute="bottom" constant="56" id="bwR-PP-wmH"/>
-                            <constraint firstItem="z1p-eU-7DK" firstAttribute="leading" secondItem="Wnq-M8-efE" secondAttribute="leading" id="ehF-jX-WTs"/>
-                            <constraint firstItem="2rh-Qc-zP9" firstAttribute="centerX" secondItem="Wnq-M8-efE" secondAttribute="centerX" id="gjP-Ax-psg"/>
-                            <constraint firstItem="2s3-cN-7Mi" firstAttribute="centerX" secondItem="Wnq-M8-efE" secondAttribute="centerX" id="rWg-DR-8u1"/>
-                            <constraint firstItem="z1p-eU-7DK" firstAttribute="top" secondItem="cI3-Gt-Qbz" secondAttribute="top" id="w1x-HF-Sal"/>
-                            <constraint firstItem="Wnq-M8-efE" firstAttribute="bottom" secondItem="2s3-cN-7Mi" secondAttribute="bottom" constant="30" id="ydg-Pu-HZB"/>
+                            <constraint firstItem="z1p-eU-7DK" firstAttribute="trailing" secondItem="Wnq-M8-efE" secondAttribute="trailing" id="BWe-hc-krk"/>
+                            <constraint firstItem="Wnq-M8-efE" firstAttribute="bottom" secondItem="2s3-cN-7Mi" secondAttribute="bottom" constant="50" id="INw-ER-66m"/>
+                            <constraint firstItem="z1p-eU-7DK" firstAttribute="top" secondItem="cI3-Gt-Qbz" secondAttribute="top" id="UEi-lZ-X6k"/>
+                            <constraint firstItem="2rh-Qc-zP9" firstAttribute="top" secondItem="z1p-eU-7DK" secondAttribute="bottom" constant="20" id="Z3x-dh-dcc"/>
+                            <constraint firstItem="z1p-eU-7DK" firstAttribute="leading" secondItem="Wnq-M8-efE" secondAttribute="leading" id="dEh-TC-FN5"/>
+                            <constraint firstItem="rE8-iR-9Xb" firstAttribute="bottom" secondItem="Wnq-M8-efE" secondAttribute="bottom" id="dkq-Sq-zX5"/>
+                            <constraint firstItem="2s3-cN-7Mi" firstAttribute="centerX" secondItem="Wnq-M8-efE" secondAttribute="centerX" id="g3t-Rg-aVr"/>
+                            <constraint firstItem="rE8-iR-9Xb" firstAttribute="leading" secondItem="Wnq-M8-efE" secondAttribute="leading" constant="20" id="kpk-mQ-Lk6"/>
+                            <constraint firstItem="2rh-Qc-zP9" firstAttribute="centerX" secondItem="Wnq-M8-efE" secondAttribute="centerX" id="m4L-ou-ASH"/>
+                            <constraint firstItem="2s3-cN-7Mi" firstAttribute="top" secondItem="2rh-Qc-zP9" secondAttribute="bottom" constant="20" id="rkL-SC-1er"/>
                         </constraints>
                     </view>
                     <connections>
@@ -268,7 +271,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7kT-1s-sAg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1212" y="64"/>
+            <point key="canvasLocation" x="1211.5942028985507" y="63.616071428571423"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="x3s-pt-aeA">
