--- a/Motocycles/Views/OnboardingCollectionViewCell.xib
+++ b/Motocycles/Views/OnboardingCollectionViewCell.xib
@@ -9,53 +9,53 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="OnboardingCollectionViewCell" customModule="Motocycles" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="411" height="587"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="" id="gTV-IL-0wX" customClass="OnboardingCollectionViewCell" customModule="Motocycles" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="413" height="635"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="411" height="587"/>
+                <rect key="frame" x="0.0" y="0.0" width="413" height="635"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="liz-12-pOO">
-                        <rect key="frame" x="0.0" y="0.0" width="411" height="420"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="420" id="AaH-bA-aJQ"/>
-                            <constraint firstAttribute="width" constant="411" id="UWi-WL-Xqu"/>
-                        </constraints>
+                        <rect key="frame" x="0.0" y="0.0" width="413" height="542.5"/>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="YNO-k3-Fav">
-                        <rect key="frame" x="20" y="420" width="371" height="147"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="YNO-k3-Fav">
+                        <rect key="frame" x="10" y="542.5" width="393" height="82.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Tecnhology G" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="91c-yd-jSL">
-                                <rect key="frame" x="0.0" y="0.0" width="371" height="82"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a very creative bussines of technology, biology, trading, etc" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6cz-Zx-thz">
-                                <rect key="frame" x="0.0" y="106" width="361" height="41"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a very creative bussines of technology, biology, trading, etc" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6cz-Zx-thz">
+                                <rect key="frame" x="0.0" y="41.5" width="393" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="0.0" height="2"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="6cz-Zx-thz" secondAttribute="trailing" constant="10" id="4Nt-X0-86Y"/>
-                            <constraint firstItem="91c-yd-jSL" firstAttribute="leading" secondItem="YNO-k3-Fav" secondAttribute="leading" id="JEC-is-uf5"/>
-                            <constraint firstAttribute="trailing" secondItem="91c-yd-jSL" secondAttribute="trailing" id="aOJ-9N-m3S"/>
+                            <constraint firstItem="91c-yd-jSL" firstAttribute="leading" secondItem="YNO-k3-Fav" secondAttribute="leading" id="3AM-x2-2Bx"/>
+                            <constraint firstItem="91c-yd-jSL" firstAttribute="top" secondItem="YNO-k3-Fav" secondAttribute="top" id="Gwe-xA-diT"/>
+                            <constraint firstItem="6cz-Zx-thz" firstAttribute="leading" secondItem="YNO-k3-Fav" secondAttribute="leading" id="a7r-NE-L11"/>
+                            <constraint firstAttribute="bottom" secondItem="6cz-Zx-thz" secondAttribute="bottom" id="g2W-Fv-JcP"/>
+                            <constraint firstAttribute="trailing" secondItem="6cz-Zx-thz" secondAttribute="trailing" id="scV-b4-zGx"/>
+                            <constraint firstAttribute="trailing" secondItem="91c-yd-jSL" secondAttribute="trailing" id="vWO-wT-t3k"/>
                         </constraints>
                     </stackView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="YNO-k3-Fav" secondAttribute="bottom" constant="20" id="3lr-B0-Ipi"/>
-                <constraint firstItem="YNO-k3-Fav" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="8ua-iG-bsr"/>
-                <constraint firstItem="liz-12-pOO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="EB2-of-dQO"/>
-                <constraint firstItem="liz-12-pOO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="cU4-f3-fEQ"/>
-                <constraint firstAttribute="trailing" secondItem="liz-12-pOO" secondAttribute="trailing" id="pyG-2o-gmb"/>
-                <constraint firstItem="YNO-k3-Fav" firstAttribute="top" secondItem="liz-12-pOO" secondAttribute="bottom" id="rWg-8S-iAK"/>
-                <constraint firstAttribute="trailing" secondItem="YNO-k3-Fav" secondAttribute="trailing" constant="20" id="xPr-2M-381"/>
+                <constraint firstItem="liz-12-pOO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="DNc-7e-Wmv"/>
+                <constraint firstItem="YNO-k3-Fav" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="H6q-ow-AwO"/>
+                <constraint firstItem="YNO-k3-Fav" firstAttribute="top" secondItem="liz-12-pOO" secondAttribute="bottom" id="HBO-fp-yAB"/>
+                <constraint firstAttribute="trailing" secondItem="liz-12-pOO" secondAttribute="trailing" id="O66-8Q-Xdq"/>
+                <constraint firstAttribute="trailing" secondItem="YNO-k3-Fav" secondAttribute="trailing" constant="10" id="OWW-Lx-7Tq"/>
+                <constraint firstAttribute="bottom" secondItem="YNO-k3-Fav" secondAttribute="bottom" constant="10" id="cWR-WP-guk"/>
+                <constraint firstItem="liz-12-pOO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="zbb-jt-UQf"/>
             </constraints>
             <connections>
                 <outlet property="imgView" destination="liz-12-pOO" id="GpP-wF-KQZ"/>
